@@ -9,11 +9,14 @@
 
 @class SCDynamicStore, NSImage;
 
+/** Tracks changes in our primary IP address. */
 @interface IPv4Observer : NSObject
 {
 	SCDynamicStore *dynStore;
 	NSImage *ipIcon;
+	//NSString *currentPrimaryIP;
 }
 
 - (id)initWithStore:(SCDynamicStore*)store;
+- (void)sleep;
 @end
