@@ -7,14 +7,19 @@
 
 // Rest of the includes
 #import "NetGrowlerController.h"
+#import "SCDynamicStore.h"
+#import "PowerNotifier.h"
 #import "IPv4Observer.h"
 #import "EthernetObserver.h"
 #import "AirportObserver.h"
+#import "PPPObserver.h"
 #import <Growl/GrowlApplicationBridge.h>
 
 static NSString *APP_NAME                       = @"NetGrowler.app";
 
 @interface NetGrowlerController (PRIVATE)
+- (id)sleepWithNil:(id)nilObject;
+- (id)wakeWithNil:(id)nilObject;
 - (void)dumpEverything:(NSString*)keyName;
 @end
 
@@ -33,9 +38,38 @@ static NSString *APP_NAME                       = @"NetGrowler.app";
 
 		observers = [[NSMutableArray alloc] init];
 		[observers addObject:[[IPv4Observer alloc] initWithStore:scNotificationManager]];
-		[observers addObject:[[EthernetObserver alloc] initWithInterface:@"en0" andStore:scNotificationManager]];
-		[observers addObject:[[AirportObserver alloc] initWithInterface:@"en1" andStore:scNotificationManager]];
 
+		// Add the appropriate observers for the network services we can see
+		struct servicePlugins {
+			NSString *suffix;
+			Class class;
+		} plugins[] = {
+			{ @"Ethernet",		[EthernetObserver class] },
+			{ @"AirPort",		[AirportObserver class] },
+			{ @"PPP",			[PPPObserver class] },
+			{ nil,				nil }
+		};
+		int i;
+		for (i = 0; plugins[i].suffix != nil; i++) {
+			NSString *prefix = @"Setup:/Network/Service/";
+			NSString *pattern = [NSString stringWithFormat:@"%@[^/]*/%@", prefix, plugins[i].suffix];
+			NSEnumerator *e = [[scNotificationManager keysForPattern:pattern] objectEnumerator];
+			NSString *key;
+			while ((key = [e nextObject]) != nil) {
+				// Find the service part
+				int startIndex = [prefix length];
+				int j;
+				for (j = startIndex; [key characterAtIndex:j] != '/'; j++) ;
+				NSString *service = [key substringWithRange:NSMakeRange(startIndex, j-startIndex)];
+				id observer = [((id) plugins[i].class) performSelector:NSSelectorFromString(@"alloc")];
+				[observer initWithService:service andStore:scNotificationManager];
+				[observers addObject:observer];
+			}
+		}
+
+		powerNotifier = [[PowerNotifier powerNotifier] retain];
+		[powerNotifier addSleepObserver:self withSelector:@selector(sleepWithNil:)];
+		[powerNotifier addWakeObserver:self withSelector:@selector(wakeWithNil:)];
 		[GrowlApplicationBridge setGrowlDelegate:self];
 	}
 	return self;
@@ -43,6 +77,7 @@ static NSString *APP_NAME                       = @"NetGrowler.app";
 
 - (void)dealloc
 {
+	[powerNotifier release];
 	[scNotificationManager release];
 	[observers release];
 	[super dealloc];
@@ -66,11 +101,12 @@ static NSString *APP_NAME                       = @"NetGrowler.app";
 	}
 }
 
-- (NSDictionary*)registrationDictionaryForGrowl
-{
+- (NSDictionary*)registrationDictionaryForGrowl {
 	NSArray *allNotes = [NSArray arrayWithObjects:
-		NOTE_LINK_UP,
-		NOTE_LINK_DOWN,
+		NOTE_ETHERNET_LINK_UP,
+		NOTE_ETHERNET_LINK_DOWN,
+		NOTE_PPP_LINK_UP,
+		NOTE_PPP_LINK_DOWN,
 		NOTE_IP_ACQUIRED,
 		NOTE_IP_RELEASED,
 		NOTE_AIRPORT_CONNECT,
@@ -82,13 +118,26 @@ static NSString *APP_NAME                       = @"NetGrowler.app";
 		nil];
 }
 
-- (NSString*)applicationNameForGrowl
-{
+- (NSString*)applicationNameForGrowl {
 	return APP_NAME;
 }
 
-- (void)dumpEverything:(NSString*)keyName
-{
+- (id)sleepWithNil:(id)nilObject {
+	//NSLog(@"Sleep event");
+	NSEnumerator *e = [observers objectEnumerator];
+	id o;
+	while ((o = [e nextObject]) != nil) {
+		[o sleep];
+	}
+	return nil;
+}
+
+- (id)wakeWithNil:(id)nilObject {
+	//NSLog(@"Wake event");
+	return nil;
+}
+
+- (void)dumpEverything:(NSString*)keyName {
 	NSDictionary *newValue = [scNotificationManager valueForKey:keyName];
 	NSLog(@"Key:\t%@\n%@\n\n", keyName, newValue);
 }
