@@ -4,8 +4,11 @@ $Id$
 NetGrowler 0.2.1 (not yet released)
 ----------------
 
+* Less noise on waking from sleep.
+* Preliminary support for PPP notifications (not working well yet).
+* Less hardcoded stuff. (Ethernet is still hardcoded as en0 due to some
+  SystemConfiguration weirdness.)
 * Code reorganization.
-
 
 NetGrowler 0.2.0 (released 3 Mar 2005)
 ----------------
